--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -444,6 +444,28 @@ textarea {
 	text-transform: uppercase
 }
 
+
+
+/* Hide image logo by default */
+.logo-img {
+    display: none;
+}
+
+/* Display image logo only on mobile and tablet */
+@media (max-width: 800px) {
+    .logo-img {
+        display: block;
+        width: 100px; /* Adjust width as needed */
+        height: 100px; /* Adjust height as needed */
+    }
+    .logo {
+        text-indent: -9999px; /* Hide the text */
+    }
+}
+
+
+
+
 .transform-link {
 	font-weight: 700
 }
@@ -645,13 +667,13 @@ input[type="button"]:focus {
 }
 
 .navigation__container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-	width: 45%
+    position: absolute;
+    top: 50%;
+    left: 20%; /* Adjust this percentage to move it to the left */
+    transform: translate(-50%, -50%);
+    width: 45%;
 }
+
 
 .navigation__list {
 	display: -webkit-box;
@@ -663,6 +685,15 @@ input[type="button"]:focus {
 	-ms-flex-pack: justify;
 	justify-content: space-between
 }
+
+.navigation__list > li {
+    margin-right: 0px; /* Increase the right margin to space out items */
+}
+
+.navigation__list > li:last-child {
+    margin-right: 0; /* Remove margin for the last item */
+}
+
 
 .navigation__list>li a {
 	color: #9e9e9e;
@@ -1021,6 +1052,7 @@ input[type="button"]:focus {
 		-ms-flex-pack: center;
 		justify-content: center
 	}
+	
 
 	.about__wrapper::before {
 		right: 0;
@@ -1088,7 +1120,7 @@ input[type="button"]:focus {
 .app-design {
 	position: relative;
 	width: 100%;
-	padding: 180px 0;
+	padding: 45px 0 60px; /* Reduced padding-bottom */
 	overflow: hidden
 }
 
@@ -1105,57 +1137,62 @@ input[type="button"]:focus {
 	background-repeat: no-repeat
 }
 
-@media (max-width: 991px) {
-	.app-design__content h2 {
-		font-size: 48px
-	}
-
-	.app-design__visual {
-		width: 922px;
-		height: 586px
-	}
-}
-
 @media (max-width: 767px) {
 	.app-design {
-		height: 400px;
-		padding: 60px 0
-	}
-
+	  height: auto; /* Adjust height to be auto for better flexibility */
+	  padding: 45px 0 60px; /* Reduced padding-bottom */	}
+  
 	.app-design__content {
-		text-align: center
+	  text-align: center;
 	}
-
+  
 	.app-design__content h2 {
-		font-size: 32px
+	  font-size: 32px;
 	}
-
+  
 	.app-design__content h2 br {
-		display: none
+	  display: none;
 	}
-
+  
 	.app-design__content p {
-		margin: 0 auto 20px auto
+	  margin: 0 auto 20px auto;
 	}
-
+  
+	.blurb__copy {
+	  font-size: 16px; /* Adjust font size */
+	  line-height: 1.5; /* Adjust line height */
+	}
+  
+	.blurb__copy--tight {
+	  max-width: 90%; /* More fluid width for tight paragraphs */
+	}
+  
 	.app-design__visual {
-		top: auto;
-		left: 50%;
-		bottom: -175px;
-		-webkit-transform: translateX(-50%);
-		transform: translateX(-50%);
-		width: 679px;
-		height: 439px
+	  top: auto;
+	  left: 50%;
+	  bottom: -175px;
+	  transform: translateX(-50%);
+	  width: 679px;
+	  height: 439px;
 	}
-}
-
-@media (max-width: 480px) {
+  }
+  
+  @media (max-width: 480px) {
 	.app-design__visual {
-		bottom: -100px;
-		width: 576px;
-		height: 366px
+	  bottom: -100px;
+	  width: 576px;
+	  height: 366px;
 	}
-}
+  
+	.blurb__copy {
+	  font-size: 14px; /* Smaller font size for smaller screens */
+	}
+  
+	.blurb__copy--tight {
+	  max-width: 100%; /* Use full width for very small screens */
+	}
+  }
+  
 
 .web-design {
 	position: relative;
@@ -1970,5 +2007,89 @@ height: auto;.comparison-container {
     .blog-list__post {
         /* You might want to also adjust font-sizes and other properties for mobile */
     }
+
+	.blog-header h1 {
+        font-size: 28px; /* Adjust this value as needed for mobile screens */
+    }
+    .blog-content .post h2 {
+        font-size: 20px; /* Adjust this value as needed for tablet screens */
+    }
 }
 
+@media (max-width: 768px) {
+	.blog-header h1 {
+        font-size: 28px; /* Adjust this value as needed for mobile screens */
+    }
+    .blog-content .post h2 {
+        font-size: 20px; /* Adjust this value as needed for tablet screens */
+    }
+}
+
+
+
+
+
+
+/* Default styling for mobile */
+.timeline-horizontal-container {
+    overflow-x: auto;
+    padding: 20px 0;
+    white-space: nowrap;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+/* Media query for larger screens (desktop) */
+@media (min-width: 768px) { /* Adjust this breakpoint as needed */
+    .timeline-horizontal-container {
+        margin-left: 300px;
+        margin-right: 20px;
+    }
+}
+
+
+
+
+.timeline-horizontal {
+    display: inline-block;
+    position: relative;
+}
+
+.timeline-item {
+    display: inline-block;
+    position: relative;
+    margin-right: 50px; /* Space between items */
+    vertical-align: top;
+}
+
+.timeline-dot {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #333; /* Or any color */
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translateX(-50%);
+}
+
+.timeline-content {
+    padding-top: 40px; /* Space for the dot */
+    text-align: center;
+}
+
+.timeline-horizontal:before {
+    content: '';
+    position: absolute;
+    top: 10px; /* Align with the center of the dots */
+    left: 0;
+    right: 0;
+    height: 4px;
+    background: #333; /* Or any color */
+}
+
+@media (max-width: 767px) {
+    .timeline-item {
+        margin-right: 30px;
+    }
+}
